para examen 5ta

--- a/views/common/sidebar-nav.html
+++ b/views/common/sidebar-nav.html
@@ -11,7 +11,9 @@
       <li class="nav-item" >
         <a class="nav-link" ui-sref-active="active" ui-sref="app.productos"><i class="fa fa-archive" aria-hidden="true"></i> Productos </a>
       </li>
-      
+      <li class="nav-item" >
+        <a class="nav-link" ui-sref-active="active" ui-sref="app.test"><i class="fa fa-archive" aria-hidden="true"></i> Test </a>
+      </li>
            
    
     </ul>
