--- a/views/common/navbar.html
+++ b/views/common/navbar.html
@@ -8,12 +8,12 @@
       <a class="nav-link navbar-toggler sidebar-toggler" href="#">
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">
-           {{vm.usuarioNombre}} <i class="fa fa-user-circle-o fa-2x" aria-hidden="true"></i>
+            <i class="fa fa-user-circle-o fa-2x" aria-hidden="true"></i>
           </a>
           <div class="dropdown-menu dropdown-menu-right">
     
             <div class="dropdown-header text-center">
-              <strong>Cuenta</strong>
+                <strong>{{vm.usuarioNombre}}</strong>
             </div>
             <a ng-click="vm.logout()" class="dropdown-item" href="#"><i class="fa fa-lock"></i> Cerrar sesión</a>
           </div>
